--- a/tables/contexts.tex
+++ b/tables/contexts.tex
@@ -1,31 +1,31 @@
-\begin{tabularx}{\textwidth}{|X|P{1.8cm}|P{1.2cm}|P{1cm}|P{1.4cm}|P{1.2cm}|P{1.3cm}|P{1cm}|}
+\begin{tabularx}{\textwidth}{|X|P{2.2cm}|P{1.2cm}|P{1cm}|P{1.4cm}|P{1.2cm}|P{1.3cm}|}
 
 \hline
-\textbf{Context name} & \textbf{Period} & \textbf{Nodes} & \textbf{Edges} & \textbf{Density} & \textbf{Avg degree} & \textbf{Assor-tativity} & \textbf{Scc / nodes} \\ \hline
-16 days of action & 2018-11-25 / 2018-12-10 & 396 & 349 & 0.002 & 1.8 & -0.1 & 1.0 \\ \hline
-Elf day & 2018-12-03 / 2018-12-12 & 365 & 436 & 0.003 & 2.4 & -0.2 & 1.0 \\ \hline
-Dry january & 2018-01-01 / 2018-01-31 & 235 & 234 & 0.004 & 2.0 & -0.3 & 1.0 \\ \hline
-Cervical cancer prevention week & 2018-01-21 / 2018-01-27 & 209 & 192 & 0.004 & 1.8 & -0.1 & 1.0 \\ \hline
-Time to talk day & 2018-02-06 / 2018-02-07 & 268 & 231 & 0.003 & 1.7 & -0.2 & 1.0 \\ \hline
-Eating disorder awareness week & 2018-02-25 / 2018-03-03 & 256 & 241 & 0.004 & 1.9 & -0.2 & 1.0 \\ \hline
-Rare disease day & 2018-02-28 / 2018-03-01 & 294 & 206 & 0.002 & 1.4 & -0.2 & 1.0 \\ \hline
-Ovarian cancer awareness month & 2018-03-01 / 2018-03-31 & 215 & 202 & 0.004 & 1.9 & -0.4 & 1.0 \\ \hline
-Nutrition and hydration week & 2018-03-11 / 2018-03-17 & 273 & 326 & 0.004 & 2.4 & -0.3 & 1.0 \\ \hline
-Brain awareness week & 2018-03-11 / 2018-03-17 & 307 & 281 & 0.003 & 1.8 & -0.1 & 1.0 \\ \hline
-No smoking day & 2018-03-13 / 2018-03-14 & 254 & 219 & 0.003 & 1.7 & -0.3 & 1.0 \\ \hline
-Epilepsy awareness purple day & 2018-03-26 / 2018-03-27 & 306 & 252 & 0.003 & 1.6 & -0.2 & 1.0 \\ \hline
-Experience of care week & 2018-04-23 / 2018-04-27 & 176 & 196 & 0.006 & 2.2 & -0.1 & 1.0 \\ \hline
-Brain injury week & 2018-05-01 / 2018-05-31 & 238 & 306 & 0.005 & 2.6 & -0.1 & 1.0 \\ \hline
-Mental health awareness week & 2018-05-14 / 2018-05-20 & 268 & 245 & 0.003 & 1.8 & -0.5 & 1.0 \\ \hline
-Dementia action week & 2018-05-21 / 2018-05-31 & 300 & 300 & 0.003 & 2.0 & -0.0 & 1.0 \\ \hline
-Mnd awareness month & 2018-06-01 / 2018-06-30 & 141 & 234 & 0.012 & 3.3 & -0.3 & 0.9 \\ \hline
-Wear purple for jia & 2018-06-01 / 2018-06-30 & 165 & 245 & 0.009 & 3.0 & -0.5 & 0.9 \\ \hline
-Carers week & 2018-06-11 / 2018-06-17 & 270 & 277 & 0.004 & 2.1 & 0.0 & 1.0 \\ \hline
-National dementia carers & 2018-09-09 / 2018-09-10 & 184 & 177 & 0.005 & 1.9 & -0.2 & 1.0 \\ \hline
-Mens health week & 2018-06-11 / 2018-06-17 & 264 & 214 & 0.003 & 1.6 & -0.2 & 1.0 \\ \hline
-Stress awareness day & 2018-11-07 / 2018-11-08 & 293 & 209 & 0.002 & 1.4 & -0.2 & 1.0 \\ \hline
-National dyslexia week & 2018-10-01 / 2018-10-07 & 229 & 235 & 0.004 & 2.1 & -0.2 & 1.0 \\ \hline
-Ocd awareness week & 2018-10-07 / 2018-10-13 & 202 & 193 & 0.005 & 1.9 & -0.6 & 1.0 \\ \hline
-Jeans for genes day & 2018-09-21 / 2018-09-22 & 246 & 325 & 0.005 & 2.6 & -0.2 & 1.0 \\ \hline
+\textbf{Context name} & \textbf{Period (2018)} & \textbf{Nodes} & \textbf{Edges} & \textbf{Density} & \textbf{Avg degree} & \textbf{Assor-tativity} \\ \hline
+16 days of action & 11-25 / 12-10 & 396 & 349 & 0.002 & 1.8 & -0.1 \\ \hline
+Elf day & 12-03 / 12-12 & 365 & 436 & 0.003 & 2.4 & -0.2 \\ \hline
+Dry january & 01-01 / 01-31 & 235 & 234 & 0.004 & 2.0 & -0.3 \\ \hline
+Cervical cancer prevention week & 01-21 / 01-27 & 209 & 192 & 0.004 & 1.8 & -0.1 \\ \hline
+Time to talk day & 02-06 / 02-07 & 268 & 231 & 0.003 & 1.7 & -0.2 \\ \hline
+Eating disorder awareness week & 02-25 / 03-03 & 256 & 241 & 0.004 & 1.9 & -0.2 \\ \hline
+Rare disease day & 02-28 / 03-01 & 294 & 206 & 0.002 & 1.4 & -0.2 \\ \hline
+Ovarian cancer awareness month & 03-01 / 03-31 & 215 & 202 & 0.004 & 1.9 & -0.4 \\ \hline
+Nutrition and hydration week & 03-11 / 03-17 & 273 & 326 & 0.004 & 2.4 & -0.3 \\ \hline
+Brain awareness week & 03-11 / 03-17 & 307 & 281 & 0.003 & 1.8 & -0.1 \\ \hline
+No smoking day & 03-13 / 03-14 & 254 & 219 & 0.003 & 1.7 & -0.3 \\ \hline
+Epilepsy awareness purple day & 03-26 / 03-27 & 306 & 252 & 0.003 & 1.6 & -0.2 \\ \hline
+Experience of care week & 04-23 / 04-27 & 176 & 196 & 0.006 & 2.2 & -0.1 \\ \hline
+Brain injury week & 05-01 / 05-31 & 238 & 306 & 0.005 & 2.6 & -0.1 \\ \hline
+Mental health awareness week & 05-14 / 05-20 & 268 & 245 & 0.003 & 1.8 & -0.5 \\ \hline
+Dementia action week & 05-21 / 05-31 & 300 & 300 & 0.003 & 2.0 & -0.0 \\ \hline
+Mnd awareness month & 06-01 / 06-30 & 141 & 234 & 0.012 & 3.3 & -0.3 \\ \hline
+Wear purple for jia & 06-01 / 06-30 & 165 & 245 & 0.009 & 3.0 & -0.5 \\ \hline
+Carers week & 06-11 / 06-17 & 270 & 277 & 0.004 & 2.1 & 0.0 \\ \hline
+National dementia carers & 09-09 / 09-10 & 184 & 177 & 0.005 & 1.9 & -0.2 \\ \hline
+Mens health week & 06-11 / 06-17 & 264 & 214 & 0.003 & 1.6 & -0.2 \\ \hline
+Stress awareness day & 11-07 / 11-08 & 293 & 209 & 0.002 & 1.4 & -0.2 \\ \hline
+National dyslexia week & 10-01 / 10-07 & 229 & 235 & 0.004 & 2.1 & -0.2 \\ \hline
+Ocd awareness week & 10-07 / 10-13 & 202 & 193 & 0.005 & 1.9 & -0.6 \\ \hline
+Jeans for genes day & 09-21 / 09-22 & 246 & 325 & 0.005 & 2.6 & -0.2 \\ \hline
 
 \end{tabularx}
