--- a/tables/demon-vs-infomap.tex
+++ b/tables/demon-vs-infomap.tex
@@ -1,8 +1,8 @@
 \begin{tabularx}{\textwidth}{|X|P{3.2cm}|P{3.2cm}|}
 \hline
 \textbf{Metric} & \textbf{\demon} & \textbf{\infomap} \\ \hline
-Degenerated context ratio & 0.52 & 0.0 \\ \hline
-Avg communities per good context & 1.92 & 18.88 \\ \hline
-Avg sociable users ratio & 0.06 & 0.59 \\ \hline
-Kept repeat users ratio & 0.28 & 0.37 \\ \hline
+\% of networks with null communities & 0.52 & 0.0 \\ \hline
+Avg number of communities per context & 1.92 & 18.88 \\ \hline
+Avg fraction of network users added to the DB  & 0.06 & 0.59 \\ \hline
+Fraction of repeat users  added to the DB across networks & 0.28 & 0.37 \\ \hline
 \end{tabularx}
