--- a/sections/empirical-evaluation.tex
+++ b/sections/empirical-evaluation.tex
@@ -63,7 +63,7 @@ Table~\ref{tab:demon-vs-infomap} compares the two approaches on the key metrics 
 	\resizebox{\textwidth}{!}{
 	    \input{tables/demon-vs-infomap.tex}
 	}
-	\caption{Comparing \demon to \infomap~ for community detection.}
+	\caption{Comparing \demon~to \infomap~for community detection.}
 	\label{tab:demon-vs-infomap}
 \end{table}
 
