--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -59,8 +59,7 @@ The application of the approach to the specific challenge of combating tropical 
 
 \subsection{Related Work}
 
-The closest body of research to this work is concerned with techniques for the discovery of online \textit{influencers} 
-The characterisation of online activism given in the introduction is substantially different from that of influencers, which have received much attention in the literature.
+The closest body of research to this work is concerned with techniques for the discovery of online \textit{influencers}. The characterisation of online activism given in the introduction is substantially different from that of influencers, which have received much attention in the literature.
 According to ~\cite{Kardara2015}, influencers are prominent individuals with special characteristics that enable them to	affect a disproportionately large number of their peers with their actions.
 
 A large number of metrics and techniques have been proposed to make this generic definition operational~\cite{RIQUELME2016949}. These are mostly based on metrics of network centrality, along with metrics derived from the users' online activity, i.e., number of retweets or other users' content, number of retweets of own content, and many more. 
@@ -73,9 +72,9 @@ While we believe that specific activist behaviour can be characterized using som
 
 In \cite{MATIC2011}, a customizable valuation algorithm is created to identify influencer who are creating a revitalized level of brand awareness for companies. In this way, the raking metric is limited to one topic context. The proposed approach is cross-section variables that rate influence in social media conversations about a particular topic. The cited variables used in this study are measured using quantitative and qualitative approaches to rank the users inside a topic conversation. In the quantitative side, variables such as likes, viewers per months, post frequency the number of comments in posts are accounted. For the qualitative metrics, the number of posts positives and negatives about one topic, participation in others social medias and posts related to the main topic are considered.  The proposed approach is quite interesting to evaluate the varying degree of influence of any blogger on a particular topic. However, this approach is complex to automate due to the use of qualitative methods for the calculation of influence ranking.
 
-Based on metrics that can be computed in an automatic way and real time, in \cite{Kardara2015} a new ranking algorithm is proposed to find local influencers on Twitter that appear within the context of a specific event being discussed, incorporating the network dynamics as the event evolves with time. However, the approach is limited to look for users using classical statics based on network created in real time. Use these ranking approach brigs the limitation to find users that are a lot of attention, but cannot create a real impact over users inside one topic.
+Based on metrics that can be computed in an automatic way and real time, in \cite{Kardara2015} a new ranking algorithm is proposed to find local influencers on Twitter that appear within the context of a specific event being discussed, incorporating the network dynamics as the event evolves with time. However, the approach is limited to look for users using classical statistics based on network created in real time. Use these ranking approach brings the limitation to find users that have a lot of attention, but cannot create a real impact over users inside one topic.
 
-Some approaches tries to extract the content of conversations over topics to understand the ability of a user to be influential within a topic. In \cite{Biran2012}, a classifier is trained to identify when an user is able to influencer another inside a conversation. However, in this case the necessity of create labeled data to build a machine learning classifier makes this approach impracticable in our case, which aims to be most practical possible. In addition the need to create a classifier for each topic makes the context work of this system extremely limited.
+Some approaches try to extract the content of conversations over topics to understand the ability of a user to be influential within a topic. In \cite{Biran2012}, a classifier is trained to identify when an user is able to influence another one inside a conversation. However, in this case the necessity of creating labelled data to build a machine learning classifier makes this approach impracticable in our case, which aims to be most practical possible. In addition the need to create a classifier for each topic makes the context work of this system extremely limited.
 
 
 \anote{topic-specific influencers. cite \cite{Schenk2011} SCHENK 2011}\\
