--- a/tables/demon-vs-infomap.tex
+++ b/tables/demon-vs-infomap.tex
@@ -2,7 +2,7 @@
 \hline
 \textbf{Metric} & \textbf{\demon} & \textbf{\infomap} \\ \hline
 \% of networks with null communities & 0.52 & 0.0 \\ \hline
-Avg number of communities per context & 1.92 & 18.88 \\ \hline
-Avg fraction of network users added to the DB  & 0.06 & 0.59 \\ \hline
+Number of communities per context (avg) & 1.92 & 18.88 \\ \hline
+Fraction of network users added to the DB  (avg) & 0.06 & 0.59 \\ \hline
 Fraction of repeat users  added to the DB across networks & 0.28 & 0.37 \\ \hline
 \end{tabularx}
